[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menu/player_result.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/menu/result.gd" type="Script" id=2]
[ext_resource path="res://assets/hud/menu.theme" type="Theme" id=3]

[node name="result" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -32.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v_box_container" type="VBoxContainer" parent="."]
margin_right = 480.0
margin_bottom = 240.0
mouse_filter = 2

[node name="h_box_container" type="HBoxContainer" parent="v_box_container"]
margin_right = 480.0
margin_bottom = 213.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ally" parent="v_box_container/h_box_container" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 238.0
margin_bottom = 213.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="enemy" parent="v_box_container/h_box_container" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 242.0
margin_right = 480.0
margin_bottom = 213.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="button" type="Button" parent="v_box_container"]
margin_top = 217.0
margin_right = 480.0
margin_bottom = 240.0
text = "Pass"
[connection signal="finished" from="v_box_container/h_box_container/ally" to="." method="_on_ally_finished"]
[connection signal="finished" from="v_box_container/h_box_container/enemy" to="." method="_on_enemy_finished"]
[connection signal="pressed" from="v_box_container/button" to="." method="_on_button_pressed"]
